[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/objects/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Objects/Particle.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/sound/electric_flyby_Glaneur-de-sons.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sound/laser_pulse_sharesynth.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sound/electric_buzz_Halleck.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sound/radiation_meter_cookies-policy.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sound/electric_movement_tosha73.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Curve" id=2]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.143678, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.801324, 0.986755 )
colors = PoolColorArray( 1, 1, 1, 0.831373, 1, 1, 1, 0.235294, 0, 0, 0, 0 )

[node name="Player" instance=ExtResource( 2 )]
mass = 10.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Kernel" type="Polygon2D" parent="." index="2"]
show_behind_parent = true
color = Color( 0.156863, 0.886275, 0.407843, 1 )
antialiased = true
polygon = PoolVector2Array( 4.92584, -7.21646, 6.9281, -7.21646, 8.26294, -5.54791, 8.42979, -3.21194, 10.2652, -1.37653, 9.93149, 0.125162, 8.26294, 1.96057, 9.43092, 3.79597, 8.7635, 6.2988, 6.76124, 6.63251, 5.59326, 8.80162, 2.92358, 8.96848, 1.42188, 8.80162, -0.580376, 10.4702, -3.58377, 9.80275, -4.91861, 8.80162, -5.25232, 6.96622, -7.08772, 6.2988, -8.42256, 4.46339, -7.75514, 3.46226, -10.0911, 0.792582, -9.7574, -2.04395, -9.08998, -2.37766, -8.75627, -5.71476, -7.42143, -7.0496, -5.08546, -7.88388, -4.08433, -9.71928, -2.41578, -10.2198, -0.413521, -10.2198, 2.0893, -10.3867, 3.75785, -9.05186 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="." index="3"]
show_behind_parent = true
amount = 32
lifetime = 0.3
local_coords = false
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.5
orbit_velocity_curve = SubResource( 2 )
radial_accel = 100.0
radial_accel_random = 1.0
angle = 45.0
angle_random = 1.0
scale_amount = 4.0
scale_amount_random = 0.8
color_ramp = SubResource( 3 )
hue_variation = 0.75
hue_variation_random = 0.05

[node name="ManaLoader" type="Timer" parent="." index="4"]
wait_time = 0.05
autostart = true

[node name="Audio" type="Node" parent="." index="5"]

[node name="LaserPulse" type="AudioStreamPlayer2D" parent="Audio" index="0"]
stream = ExtResource( 4 )
volume_db = -16.0

[node name="ElecFlyby" type="AudioStreamPlayer2D" parent="Audio" index="1"]
stream = ExtResource( 3 )
volume_db = 14.35

[node name="ElecBuzz" type="AudioStreamPlayer2D" parent="Audio" index="2"]
stream = ExtResource( 5 )
volume_db = 3.216

[node name="Radiation" type="AudioStreamPlayer2D" parent="Audio" index="3"]
stream = ExtResource( 6 )
volume_db = 13.939
pitch_scale = 10.0
autoplay = true

[node name="ElecMove" type="AudioStreamPlayer2D" parent="Audio" index="4"]
stream = ExtResource( 7 )
volume_db = -12.0
autoplay = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="ManaLoader" to="." method="_on_ManaLoader_timeout"]
